fix collapse navigation for desktop

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ img {
   }
 }
 
-@media screen and (min-width: 991px) {
+@media screen and (min-width: 992px) {
   .site-header {
     padding: 1.4rem 0;
   }
